plugins {
    id 'idea'
    id 'application'
}

tasks.withType(JavaCompile).each {
    it.options.compilerArgs.addAll('--enable-preview', '-Xlint:preview')
}

ext {
    group = 'dev.tomek'
    sourceCompatibility = 15
    lombokVersion = '1.18.18'
    mainClassName = 'dev.tomek.userinstaller.idea.IdeaInstaller'
}

repositories {
    mavenLocal()
    mavenCentral()
}

dependencies {
    implementation 'info.picocli:picocli:4.6.1'
    implementation "ch.qos.logback:logback-classic:1.2.3"
    compileOnly "org.projectlombok:lombok:$lombokVersion"
    annotationProcessor "org.projectlombok:lombok:$lombokVersion"
}

application {
    mainClass = project.mainClassName
    applicationDefaultJvmArgs = ['--enable-preview']
}

jar {
    manifest {
        attributes 'Main-Class': project.mainClassName
    }
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
}
